name:             reserve
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2014 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
synopsis:         Reserve reloads web applications
description:      Universal and robust reloading for Haskell web applications
category:         Web
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/sol/reserve

executable reserve
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  build-depends:
      base == 4.*
    , base-compat >= 0.5.0
    , directory
    , network
    , unix
    , process
    , http-types
    , http-kit >= 0.5
    , bytestring

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , base-compat
    , directory
    , network
    , unix
    , process
    , http-types
    , http-kit
    , bytestring

    , hspec >= 1.5
    , QuickCheck
    , http-conduit
    , warp >= 3
